Algumas modificações na letra a) da segunda questão

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada é de aproximadamente 0.0908 ou 9.08%.\n",
+      "A probabilidade estimada é de aproximadamente 0.0903 ou 9.03%.\n",
       "A probabilidade real é de 0.0909 ou 9.09%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
@@ -210,7 +210,9 @@
     "- A probabilidade estimada foi de $0.0908$, ou seja, $9.08\\%$.\n",
     "- A probabilidade real é de $0.0909$, ou seja, $9.09\\%$.\n",
     "\n",
-    "Podemos concluir que as estimativas são razoavelmente próximas e, portanto, conforme aumentarmos o número de tentativas, as probabilidades se aproximarão cada vez mais. A lei dos grandes números (assunto de \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado."
+    "Podemos concluir que as estimativas são razoavelmente próximas e, portanto, conforme aumentarmos o número de tentativas, as probabilidades se aproximarão cada vez mais. A lei dos grandes números (assunto de \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado.\n",
+    "\n",
+    "**Obs**. O parâmetro `rel_tol` é usado como limite de aproximação do método `isclose()` para verificarmos se nossa aproximação obtida foi suficiente dado esse valor."
    ]
   },
   {
@@ -228,37 +230,17 @@
     "id": "QOr2y6H6rASi"
    },
    "source": [
+    "#### Enunciado\n",
+    "\n",
     "Em um famoso programa de televisão da década de 70 nos Estados Unidos, Monty Hall, o apresentador, apresentava três portas aos concorrentes. Atrás de uma delas estava um prêmio e, atrás das outras duas não havia nada. A interação se dava em três etapas:\n",
     "\n",
-    "* Na 1a. etapa o concorrente escolhe uma das três portas (que ainda não é aberta);\n",
-    "* Na 2a. etapa, Monty abre uma das outras duas portas que o concorrente não escolheu, revelando que o prêmio não se encontra nessa porta e revelando uma porta vazia (note que o apresentador **sempre** irá abrir uma porta que está vazia, e **nunca** a porta com o prêmio);\n",
-    "* Na 3a. etapa Monty pergunta ao concorrente se quer decidir permanecer com a porta que escolheu no início do jogo ou se ele pretende mudar para a outra porta que ainda está fechada para então a abrir. Agora, com duas portas apenas para escolher — pois uma delas já se viu, na 2a. etapa, que não tinha o prêmio — e sabendo que o prêmio está atrás de uma das restantes duas, o concorrente tem que tomar a decisão.\n",
+    "- **Etapa 1**: Concorrente escolhe uma das três portas (que ainda não é aberta).\n",
+    "\n",
+    "- **Etapa 2**: Monty abre uma das outras duas portas que o concorrente não escolheu, revelando que o prêmio não se encontra nessa porta e revelando uma porta vazia (note que o apresentador **sempre** irá abrir uma porta que está vazia, e **nunca** a porta com o prêmio).\n",
+    "\n",
+    "- **Etapa 3**: Monty pergunta ao concorrente se quer decidir permanecer com a porta que escolheu no início do jogo ou se ele pretende mudar para a outra porta que ainda está fechada para então a abrir. Agora, com duas portas apenas para escolher — pois uma delas já se viu, na 2a. etapa, que não tinha o prêmio — e sabendo que o prêmio está atrás de uma das restantes duas, o concorrente tem que tomar a decisão.\n",
     "\n",
     "O objetivo dessa questão é estudar qual é a estratégia mais lógica: ficar com a porta escolhida inicialmente ou mudar de porta? Do ponto de vista probablístico, com qual das duas portas ainda fechadas o concorrente tem mais probabilidades de ganhar?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def problema_de_monty_hall(numero_de_tentativas = 100000, trocar_porta = True):\n",
-    "    contagem_vitorias = 0\n",
-    "    \n",
-    "    for numero_de_tentativa in range(numero_de_tentativas):\n",
-    "        porta_premiada = np.random.randint(3)\n",
-    "        porta_escolhida = np.random.randint(3)\n",
-    "\n",
-    "        porta_aberta = np.random.choice([porta for porta in range(3) if porta != porta_escolhida and porta != porta_premiada])\n",
-    "\n",
-    "        if trocar_porta:\n",
-    "            porta_escolhida = next(porta for porta in range(3) if porta != porta_aberta and porta != porta_escolhida)\n",
-    "            \n",
-    "        if porta_escolhida == porta_premiada:\n",
-    "            contagem_vitorias += 1\n",
-    "        \n",
-    "    return contagem_vitorias, numero_de_tentativas"
    ]
   },
   {
@@ -271,8 +253,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solução\n",
+    "\n",
+    "Para responder à questão, iremos simular o problema, ou seja, temos um usuário que irá escolher aleatoriamente uma das 3 portas possíveis. Feito isso, será selecionada, aleatoriamente também, uma das outras 2 portas remanescentes. Por fim, teremos a oportunidade de mudar nossa escolha (`trocar_porta = True`) e será a relevada a porta com a premiação.\n",
+    "\n",
+    "Nesse sentido, definimos um número arbitrário de tentativas, novamente $100.000$, para as quais todas as escolhas de portas serão aleatórias."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def problema_monty_hall(n_tentativas = 100000, trocar_porta = True):\n",
+    "    n_vitorias = 0\n",
+    "    \n",
+    "    for _ in range(n_tentativas):\n",
+    "        porta_premiada = np.random.randint(3)\n",
+    "        porta_escolhida = np.random.randint(3)\n",
+    "\n",
+    "        porta_aberta = np.random.choice([porta for porta in range(3) if porta != porta_escolhida and porta != porta_premiada])\n",
+    "\n",
+    "        if trocar_porta:\n",
+    "            porta_escolhida = next(porta for porta in range(3) if porta != porta_aberta and porta != porta_escolhida)\n",
+    "            \n",
+    "        if porta_escolhida == porta_premiada:\n",
+    "            n_vitorias += 1\n",
+    "        \n",
+    "    return n_vitorias / n_tentativas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:13.424954Z",
@@ -284,38 +301,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6674 ou 66.74%.\n",
-      "A probabilidade obtida de vitória mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n",
+      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6692 ou 66.92%.\n",
+      "A probabilidade real de vitória mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n",
       "\n",
-      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
-      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
-      "A probabilidade estimada é próxima da probabilidade obtida.\n"
+      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3332 ou 33.32%.\n",
+      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n"
      ]
     }
    ],
    "source": [
-    "contagem_vitorias, numero_de_tentativas = problema_de_monty_hall(numero_de_tentativas = 100000, trocar_porta = True)\n",
     "\n",
-    "probabilidade_estimada = contagem_vitorias / numero_de_tentativas\n",
-    "probabilidade_obtida = 2 / 3\n",
+    "\n",
+    "# Caso 1: Usuário decide trocar de porta\n",
+    "\n",
+    "probabilidade_estimada = problema_monty_hall(n_tentativas = 100000, trocar_porta = True)\n",
+    "probabilidade_trocando = 2 / 3\n",
     "\n",
     "print(f\"A probabilidade estimada de vitória mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade obtida de vitória mudando de porta é de aproximadamente {probabilidade_obtida:.4f} ou {probabilidade_obtida * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade real de vitória mudando de porta é de aproximadamente {probabilidade_real:.4f} ou {probabilidade_real * 100:.2f}%.\")\n",
     "\n",
-    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol = 0.05):\n",
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_real * 100, rel_tol = 0.05):\n",
     "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\\n\")\n",
+    "else:\n",
+    "    print(\"A probabilidade estimada não é próxima da probabilidade obtida.\")\n",
     "\n",
-    "contagem_vitorias, numero_de_tentativas = problema_de_monty_hall(numero_de_tentativas = 100000, trocar_porta = False)\n",
+    "# Caso 2: Usuário decide não trocar de porta\n",
     "\n",
-    "probabilidade_estimada = contagem_vitorias / numero_de_tentativas\n",
-    "probabilidade_obtida = 1 / 3\n",
+    "probabilidade_estimada = problema_monty_hall(n_tentativas = 100000, trocar_porta = False)\n",
+    "probabilidade_n_trocando = 1 / 3\n",
     "\n",
     "print(f\"A probabilidade estimada de vitória não mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade obtida de vitória não mudando de porta é de aproximadamente {probabilidade_obtida:.4f} ou {probabilidade_obtida * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade obtida de vitória não mudando de porta é de aproximadamente {probabilidade_real:.4f} ou {probabilidade_real * 100:.2f}%.\")\n",
     "\n",
-    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol = 0.05):\n",
-    "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")"
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_real * 100, rel_tol = 0.05):\n",
+    "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")\n",
+    "else:\n",
+    "    print(\"A probabilidade estimada não é próxima da probabilidade obtida.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Após as $100.000$ tentativas, obtemos os seguintes resultados para os casos descritos abaixo:\n",
+    "\n",
+    "(`trocar_porta = True`)\n",
+    "\n",
+    "- \n",
+    "\n",
+    "(`trocar_porta = False`)\n",
+    "\n",
+    "- \n"
    ]
   },
   {
@@ -403,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:35:47.103279Z",
@@ -515,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
