Modificando questão 2 letra a)

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada é de aproximadamente 0.0903 ou 9.03%.\n",
+      "A probabilidade estimada é de aproximadamente 0.0875 ou 8.75%.\n",
       "A probabilidade real é de 0.0909 ou 9.09%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:13.424954Z",
@@ -301,12 +301,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6692 ou 66.92%.\n",
-      "A probabilidade real de vitória mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n",
-      "A probabilidade estimada é próxima da probabilidade obtida.\n",
-      "\n",
-      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3332 ou 33.32%.\n",
-      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n"
+      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6674 ou 66.74%.\n",
+      "A probabilidade real de vitória mudando de porta é de aproximadamente 0.0909 ou 9.09%.\n",
+      "A probabilidade estimada não é próxima da probabilidade obtida.\n",
+      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3320 ou 33.20%.\n",
+      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.0909 ou 9.09%.\n",
+      "A probabilidade estimada não é próxima da probabilidade obtida.\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
     "if m.isclose(probabilidade_estimada * 100, probabilidade_real * 100, rel_tol = 0.05):\n",
     "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\\n\")\n",
     "else:\n",
-    "    print(\"A probabilidade estimada não é próxima da probabilidade obtida.\")\n",
+    "    print(\"A probabilidade estimada não é próxima da probabilidade obtida.\\n\")\n",
     "\n",
     "# Caso 2: Usuário decide não trocar de porta\n",
     "\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:35:47.103279Z",
@@ -516,7 +516,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8724 ou 87.24%.\n"
+      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8738 ou 87.38%.\n"
      ]
     }
    ],
@@ -552,15 +552,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5852 ou 58.52%.\n",
-      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2895 ou 28.95%.\n"
+      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5858 ou 58.58%.\n",
+      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2869 ou 28.69%.\n"
      ]
     }
    ],
