Modificando questão 2 letra a)

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada é de aproximadamente 0.0875 ou 8.75%.\n",
+      "A probabilidade estimada é de aproximadamente 0.0915 ou 9.15%.\n",
       "A probabilidade real é de 0.0909 ou 9.09%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:13.424954Z",
@@ -301,12 +301,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6674 ou 66.74%.\n",
-      "A probabilidade real de vitória mudando de porta é de aproximadamente 0.0909 ou 9.09%.\n",
-      "A probabilidade estimada não é próxima da probabilidade obtida.\n",
-      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3320 ou 33.20%.\n",
-      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.0909 ou 9.09%.\n",
-      "A probabilidade estimada não é próxima da probabilidade obtida.\n"
+      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6657 ou 66.57%.\n",
+      "A probabilidade real de vitória mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n",
+      "A probabilidade estimada é próxima da probabilidade obtida.\n",
+      "\n",
+      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3329 ou 33.29%.\n",
+      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
+      "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
     }
    ],
@@ -319,12 +320,12 @@
     "probabilidade_trocando = 2 / 3\n",
     "\n",
     "print(f\"A probabilidade estimada de vitória mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade real de vitória mudando de porta é de aproximadamente {probabilidade_real:.4f} ou {probabilidade_real * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade real de vitória mudando de porta é de aproximadamente {probabilidade_trocando:.4f} ou {probabilidade_trocando * 100:.2f}%.\")\n",
     "\n",
-    "if m.isclose(probabilidade_estimada * 100, probabilidade_real * 100, rel_tol = 0.05):\n",
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_trocando * 100, rel_tol = 0.05):\n",
     "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\\n\")\n",
     "else:\n",
-    "    print(\"A probabilidade estimada não é próxima da probabilidade obtida.\\n\")\n",
+    "    print(\"A probabilidade estimada não é próxima da probabilidade obtida\")\n",
     "\n",
     "# Caso 2: Usuário decide não trocar de porta\n",
     "\n",
@@ -332,9 +333,9 @@
     "probabilidade_n_trocando = 1 / 3\n",
     "\n",
     "print(f\"A probabilidade estimada de vitória não mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade obtida de vitória não mudando de porta é de aproximadamente {probabilidade_real:.4f} ou {probabilidade_real * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade obtida de vitória não mudando de porta é de aproximadamente {probabilidade_n_trocando:.4f} ou {probabilidade_n_trocando * 100:.2f}%.\")\n",
     "\n",
-    "if m.isclose(probabilidade_estimada * 100, probabilidade_real * 100, rel_tol = 0.05):\n",
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_n_trocando * 100, rel_tol = 0.05):\n",
     "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")\n",
     "else:\n",
     "    print(\"A probabilidade estimada não é próxima da probabilidade obtida.\")"
@@ -348,11 +349,13 @@
     "\n",
     "(`trocar_porta = True`)\n",
     "\n",
-    "- \n",
+    "- A probabilidade de ganhar o prêmio corresponde a $0.6674$ ou também $66.74\\%$ que se aproxima suficientemente à probabilidade teórica calculada de $0.6667$, isto é, $66.67\\%$.\n",
     "\n",
     "(`trocar_porta = False`)\n",
     "\n",
-    "- \n"
+    "- Por outro lado, a probabilidade de ganhar não mudando de porta corresponde a aproximadamente $0.3329$, isto é, $33.29\\%$, enquanto a probabilidade teórica calculada foi de $0.3333$ ou $33.33\\%$. \n",
+    "\n",
+    "Com base nesses resultados, podemos concluir que nossa escolha arbitrária de $100.000$ tentativas foi suficiente para obter uma estimativa próxima em ambos os casos."
    ]
   },
   {
@@ -361,15 +364,13 @@
     "id": "ZLMuLgq3wrjJ"
    },
    "source": [
-    "Com $100000$ tentativas, a probabilidade estimada de ganhar o prêmio ao mudar de porta é de aproximadamente $0.6674$ ou $66.74$%, um valor bem próximo da probabilidade teórica de $0.6667$ ou $66.67$%, enquanto a probabilidade estimada de ganhar o prêmio ao não mudar de porta é de aproximadamente $0.3333$ ou $33.33$%, um valor bem próximo da probabilidade teórica de $0.3333$ ou $33.33$%. Portanto, a estratégia mais lógica é mudar de porta.\n",
-    "\n",
     "Portanto, a estratégia mais lógica é mudar de porta. \n",
     "\n",
     "A princípio, quando o participante escolhe uma das portas, a probabilidade de ganhar o prêmio é de $\\dfrac{1}{3}$. Portanto, as outras duas portas que não escondem o prêmio têm uma probabilidade de $\\dfrac{2}{3}$, em conjunto, de esconderem o prêmio.\n",
     "\n",
     "Apesar de Monty abrir uma porta que não esconde o prêmio, não existe nenhuma razão para que essa probabilidade mude. Quando uma dessas portas é aberta (por não esconder o prêmio), a porta que não foi escolhida e continua fechada passa a acumular a probabilidade de $\\dfrac{2}{3}$ (que antes era dividida entre essa e a porta que foi aberta pelo apresentador) de esconder o prêmio.\n",
     "\n",
-    "Portanto, a estratégia mais lógica é mudar de porta, pois a probabilidade de ganhar o prêmio é de $\\dfrac{2}{3}$, enquanto a probabilidade de ganhar o prêmio ao não mudar de porta é de $\\dfrac{1}{3}$."
+    "Nesse sentido, o usuário terá mais chances de ganhar mudando de porta, pois a probabilidade de ganhar o prêmio é de $\\dfrac{2}{3}$, enquanto a probabilidade de ganhar o prêmio ao não mudar de porta é de $\\dfrac{1}{3}$."
    ]
   },
   {
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:35:47.103279Z",
@@ -516,7 +517,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8738 ou 87.38%.\n"
+      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8729 ou 87.29%.\n"
      ]
     }
    ],
@@ -552,15 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5858 ou 58.58%.\n",
-      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2869 ou 28.69%.\n"
+      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5832 ou 58.32%.\n",
+      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2905 ou 29.05%.\n"
      ]
     }
    ],
