--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -71,7 +71,9 @@
     "\n",
     "* Todos os passos de sua resolução devem ser devidamente justificados.\n",
     "\n",
-    "* Ao entregar essa avaliação, você afirma ter lido e estar de acordo com essas regras, comprometendo-se a cumpri-las."
+    "* Ao entregar essa avaliação, você afirma ter lido e estar de acordo com essas regras, comprometendo-se a cumpri-las.\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -80,7 +82,7 @@
     "id": "DLypPchqnhoc"
    },
    "source": [
-    "# O projeto"
+    "# O Projeto"
    ]
   },
   {
@@ -212,7 +214,9 @@
     "\n",
     "Podemos concluir que as estimativas são razoavelmente próximas e, portanto, conforme aumentarmos o número de tentativas, as probabilidades se aproximarão cada vez mais. A lei dos grandes números (assunto de \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado.\n",
     "\n",
-    "**Obs**. O parâmetro `rel_tol` é usado como limite de aproximação do método `isclose()` para verificarmos se nossa aproximação obtida foi suficiente dado esse valor."
+    "**Obs**. O parâmetro `rel_tol` é usado como limite de aproximação do método `isclose()` para verificarmos se nossa aproximação obtida foi suficiente dado esse valor.\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -386,19 +390,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos utilizar o Teorema de Bayes para calcular a probabilidade de ganhar o prêmio ao mudar de porta. \n",
+    "Para calcularmos a probabilidade do participante ganhar o prêmio, aplicaremos o **Teorema de Bayes** em cada uma das possibilidades.\n",
     "\n",
-    "Inicialmente, vamos supor que o participante escolha a porta 1 (o mesmo raciocínio vale para as portas 2 e 3, sem perda de generalidade).\n",
+    "Vamos supor, **sem perda de generalização**, que o participante escolha a porta 1.\n",
     "\n",
-    "Seja $C_{i}, i = 1, 2, 3$ o evento de que o prêmio está atrás da i-ésima porta e $A{j}, j = 1, 2, 3 \\land j \\neq i $ o evento de que Monty abre a j-ésima porta. \n",
+    "Considere o seguinte evento:\n",
     "\n",
-    "Queremos calcular a probabilidade de $C_{i}$ dado $A{j}$, ou seja, $P(C_{i}|A_{j})$. \n",
+    "- $C_i=\\textup{Prêmio está na i-ésima porta}$.\n",
     "\n",
-    "Vamos supor que o apresentador abriu a porta $3$ ($A_{3})$.\n",
+    "- $A_j=\\textup{Monty abre a j-ésima porta}$.\n",
+    "\n",
+    "Portanto, temos os eventos $C_1,C_2$ e $C_3$, o mesmo vale para os eventos $A_1,\\dots,A_3$. Nesse sentido, desejamos calcular a probabilidade de $C_{i}$ dado $A{j}$, ou seja, $P(C_{i}|A_{j})$ considerando as possíveis combinações de $i$ e $j$. \n",
+    "\n",
+    "Vamos supor que o apresentador abriu a porta $3$, o que corresponde ao evento $A_{3}$.\n",
     "\n",
     "Inicialmente, a probabilidade de escolha da porta escondendo o prêmio para cada uma das portas é de $\\dfrac{1}{3}$. Portanto, temos:\n",
     "\n",
-    "- $P(C_{1}) = P(C_{2}) = P(C_{3}) = \\dfrac{1}{3}$\n",
+    "$$\n",
+    "P(C_{1}) = P(C_{2}) = P(C_{3}) = \\dfrac{1}{3}\n",
+    "$$\n",
     "\n",
     "Agora, vamos calcular as probabilidades de Monty abrir a porta $3$. As probabilidades do apresentador abrir a porta 3 em cada cenário são:\n",
     "\n",
@@ -410,15 +420,23 @@
     "\n",
     "Pela Lei da Probabilidade Total, a probabilidade de Monty abrir a porta $3$ ($P(A_{3}$) é:\n",
     "\n",
-    "- $P(A_{3}) = P(A_{3} | C_{1}) \\cdot P(C_{1}) + P(A_{3} | C_{2}) \\cdot P(C_{2}) + P(A_{3} | C_{3}) \\cdot P(C_{3}) = \\dfrac{1}{2} \\cdot \\dfrac{1}{3} + 1 \\cdot \\dfrac{1}{3} + 0 \\cdot \\dfrac{1}{3} = \\dfrac{2}{6} = \\dfrac{1}{2}$\n",
+    "$$\n",
+    "P(A_{3}) = P(A_{3} | C_{1}) \\cdot P(C_{1}) + P(A_{3} | C_{2}) \\cdot P(C_{2}) + P(A_{3} | C_{3}) \\cdot P(C_{3}) = \\dfrac{1}{2} \\cdot \\dfrac{1}{3} + 1 \\cdot \\dfrac{1}{3} + 0 \\cdot \\dfrac{1}{3} = \\dfrac{2}{6} = \\dfrac{1}{2}\n",
+    "$$\n",
     "\n",
     "Vamos agora calcular a probabilidade do participante ganhar mantendo a escolha da porta $1$ ($P(C_{1} | A_{3})$), ou mudando a escolha para a porta $2$ ($P(C_{2} | A_{3})$), utilizando o Teorema de Bayes:\n",
     "\n",
-    "- $P(C_{1} | A_{3}) = \\dfrac{P(A_{3} | C_{1}) \\cdot P(C_{1})}{P(A_{3})} = \\dfrac{\\dfrac{1}{2} \\cdot \\dfrac{1}{3}}{\\dfrac{1}{2}} = \\dfrac{1}{3}$\n",
+    "$$\n",
+    "P(C_{1} | A_{3}) = \\dfrac{P(A_{3} | C_{1}) \\cdot P(C_{1})}{P(A_{3})} = \\dfrac{\\dfrac{1}{2} \\cdot \\dfrac{1}{3}}{\\dfrac{1}{2}} = \\dfrac{1}{3}\n",
+    "$$\n",
     "\n",
-    "- $P(C_{2} | A_{3}) = \\dfrac{P(A_{3} | C_{2}) \\cdot P(C_{2})}{P(A_{3})} = \\dfrac{1 \\cdot \\dfrac{1}{3}}{\\dfrac{1}{2}} = \\dfrac{2}{3}$\n",
+    "$$\n",
+    "P(C_{2} | A_{3}) = \\dfrac{P(A_{3} | C_{2}) \\cdot P(C_{2})}{P(A_{3})} = \\dfrac{1 \\cdot \\dfrac{1}{3}}{\\dfrac{1}{2}} = \\dfrac{2}{3}\n",
+    "$$\n",
     "\n",
-    "Portanto, a probabilidade de ganhar o prêmio ao mudar de porta é de $\\dfrac{2}{3}$, enquanto a probabilidade de ganhar o prêmio ao não mudar de porta é de $\\dfrac{1}{3}$, como esperado."
+    "Portanto, a probabilidade de ganhar o prêmio ao mudar de porta é de $\\dfrac{2}{3}$, enquanto a probabilidade de ganhar o prêmio ao não mudar de porta é de $\\dfrac{1}{3}$, como esperado.\n",
+    "\n",
+    "***"
    ]
   },
   {
