Atualização do Projeto 01

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
@@ -177,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada é de aproximadamente 0.0898 ou 8.98%.\n",
+      "A probabilidade estimada é de aproximadamente 0.0919 ou 9.19%.\n",
       "A probabilidade real é de 0.0909 ou 9.09%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
@@ -209,10 +209,12 @@
     "\n",
     "Feito isso, definimos o número de tentativas como $100.000$ e conseguimos extrair as seguintes informações com relação à probabilidade de observarmos **dois 6** sabendo que pelo menos um deles é 6:\n",
     "\n",
-    "- A probabilidade estimada foi de $0.0908$, ou seja, $9.08\\%$.\n",
+    "- A probabilidade estimada foi de $0.0919$, ou seja, $9.19\\%$.\n",
     "- A probabilidade real é de $0.0909$, ou seja, $9.09\\%$.\n",
     "\n",
     "Podemos concluir que as estimativas são razoavelmente próximas e, portanto, conforme aumentarmos o número de tentativas, as probabilidades se aproximarão cada vez mais. A lei dos grandes números (assunto de \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado.\n",
+    "\n",
+    "Apenas devemos lembrar que a probabilidade obtida em aula foi calculada utilizando a probabilidade condicional com base no fato de que pelo menos um dado rolou $6$, e portanto, a probabilidade original dos dois dados rolarem $6$ ($\\dfrac{1}{36}$) em um cenário comum de probabilidade não servia no contexto do problema, visto a informação adicional dada.\n",
     "\n",
     "**Obs**. O parâmetro `rel_tol` é usado como limite de aproximação do método `isclose()` para verificarmos se nossa aproximação obtida foi suficiente dado esse valor.\n",
     "\n",
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:13.424954Z",
@@ -305,12 +307,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6679 ou 66.79%.\n",
+      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6661 ou 66.61%.\n",
       "A probabilidade real de vitória mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n",
       "\n",
-      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3321 ou 33.21%.\n",
-      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
+      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3341 ou 33.41%.\n",
+      "A probabilidade real de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
     }
@@ -337,7 +339,7 @@
     "probabilidade_n_trocando = 1 / 3\n",
     "\n",
     "print(f\"A probabilidade estimada de vitória não mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade obtida de vitória não mudando de porta é de aproximadamente {probabilidade_n_trocando:.4f} ou {probabilidade_n_trocando * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade real de vitória não mudando de porta é de aproximadamente {probabilidade_n_trocando:.4f} ou {probabilidade_n_trocando * 100:.2f}%.\")\n",
     "\n",
     "if m.isclose(probabilidade_estimada * 100, probabilidade_n_trocando * 100, rel_tol = 0.05):\n",
     "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")\n",
@@ -353,11 +355,11 @@
     "\n",
     "(`trocar_porta = True`)\n",
     "\n",
-    "- A probabilidade de ganhar o prêmio corresponde a $0.6674$ ou também $66.74\\%$ que se aproxima suficientemente à probabilidade teórica calculada de $0.6667$, isto é, $66.67\\%$.\n",
+    "- A probabilidade de ganhar o prêmio corresponde a $0.6661$ ou também $66.61\\%$ que se aproxima suficientemente à probabilidade teórica calculada de $0.6667$, isto é, $66.67\\%$.\n",
     "\n",
     "(`trocar_porta = False`)\n",
     "\n",
-    "- Por outro lado, a probabilidade de ganhar não mudando de porta corresponde a aproximadamente $0.3329$, isto é, $33.29\\%$, enquanto a probabilidade teórica calculada foi de $0.3333$ ou $33.33\\%$. \n",
+    "- Por outro lado, a probabilidade de ganhar não mudando de porta corresponde a aproximadamente $0.3341$, isto é, $33.41\\%$, enquanto a probabilidade teórica calculada foi de $0.3333$ ou $33.33\\%$. \n",
     "\n",
     "Com base nesses resultados, podemos concluir que nossa escolha arbitrária de $100.000$ tentativas foi suficiente para obter uma estimativa próxima em ambos os casos."
    ]
@@ -374,7 +376,9 @@
     "\n",
     "Apesar de Monty abrir uma porta que não esconde o prêmio, não existe nenhuma razão para que essa probabilidade mude. Quando uma dessas portas é aberta (por não esconder o prêmio), a porta que não foi escolhida e continua fechada passa a acumular a probabilidade de $\\dfrac{2}{3}$ (que antes era dividida entre essa e a porta que foi aberta pelo apresentador) de esconder o prêmio.\n",
     "\n",
-    "Nesse sentido, o usuário terá mais chances de ganhar mudando de porta, pois a probabilidade de ganhar o prêmio é de $\\dfrac{2}{3}$, enquanto a probabilidade de ganhar o prêmio ao não mudar de porta é de $\\dfrac{1}{3}$."
+    "Nesse sentido, o usuário terá mais chances de ganhar mudando de porta, pois a probabilidade de ganhar o prêmio é de $\\dfrac{2}{3}$, enquanto a probabilidade de ganhar o prêmio ao não mudar de porta é de $\\dfrac{1}{3}$.\n",
+    "\n",
+    "Um outro raciocínio válido se deve ao fato de que a probabilidade de escolher uma porta errada é maior do que escolher a porta correta, e portanto, considerando o cenário onde o participante vence, escolher a porta errada de primeira (com probabilidade de $\\dfrac{2}{3}$) e trocar em seguida é mais vantajoso do que escolher a porta certa de primeira (com probabilidade de $\\dfrac{1}{3}$) e não trocar."
    ]
   },
   {
@@ -459,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:35:47.103279Z",
@@ -535,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8737 ou 87.37%.\n"
+      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8741 ou 87.41%.\n"
      ]
     }
    ],
@@ -551,13 +555,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com $100000$ tentativas, a probabilidade estimada de que o jogo não termine em empate é de aproximadamente $0.8726$ ou $87.26$%.\n",
+    "Com $100000$ tentativas, a probabilidade estimada de que o jogo não termine em empate é de aproximadamente $0.8741$ ou $87.41$%.\n",
     "\n",
     "Intuitivamente, a probabilidade de que o jogo não termine em empate é alta porque, ao contrário do jogo da velha tradicional, os jogadores não têm uma estratégia definida. \n",
     "\n",
-    "Em vez disso, eles escolhem aleatoriamente as casas onde irão marcar. Isso significa que, em geral, o jogo terminará com um vencedor, pois é improvável que ambos os jogadores escolham as mesmas casas em cada rodada. \n",
+    "Em vez disso, eles escolhem aleatoriamente as casas onde irão marcar. Isso significa que, em geral, o jogo terminará com um vencedor, pois é improvável que ambos os jogadores escolham as mesmas casas em cada jogo.\n",
     "\n",
-    "Além disso, o empate só acontece na última jogada se nenhuma linha, coluna ou diagonal estiver completa, o que é um evento raro nesse contexto, dado que qualquer um dos jogadores pode vencer a qualquer momento."
+    "Além disso, o empate só acontece na última jogada se nenhuma linha, coluna ou diagonal estiver completa, o que é um evento raro nesse contexto, dado que qualquer um dos jogadores pode vencer a qualquer momento a partir da $5ª$ rodada (primeira rodada na qual um jogador pode vencer)."
    ]
   },
   {
@@ -571,15 +575,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5849 ou 58.49%.\n",
-      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2877 ou 28.77%.\n"
+      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5859 ou 58.59%.\n",
+      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2884 ou 28.84%.\n"
      ]
     }
    ],
@@ -599,7 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com $100000$ tentativas, a probabilidade estimada de que o jogador que começa ganhe o jogo é de aproximadamente $0.5852$ ou $58.52$%, enquanto a probabilidade estimada de que o segundo jogador ganhe o jogo é de aproximadamente $0.2895$ ou $28.95$%.\n",
+    "Com $100000$ tentativas, a probabilidade estimada de que o jogador que começa ganhe o jogo é de aproximadamente $0.5859$ ou $58.59$%, enquanto a probabilidade estimada de que o segundo jogador ganhe o jogo é de aproximadamente $0.2884$ ou $28.84$%.\n",
     "\n",
     "Isso acontece pois o jogador que começa tem mais chances de ganhar, pois ele tem uma jogada a mais do que o segundo jogador.\n",
     "\n",
@@ -636,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
