Atualização do Projeto 01

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -400,9 +400,9 @@
     "\n",
     "Considere o seguinte evento:\n",
     "\n",
-    "- $C_i=\\textup{Prêmio está na i-ésima porta}$.\n",
+    "- $C_i=\\text{Prêmio está na i-ésima porta}$.\n",
     "\n",
-    "- $A_j=\\textup{Monty abre a j-ésima porta}$.\n",
+    "- $A_j=\\text{Monty abre a j-ésima porta}$.\n",
     "\n",
     "Portanto, temos os eventos $C_1,C_2$ e $C_3$, o mesmo vale para os eventos $A_1,\\dots,A_3$. Nesse sentido, desejamos calcular a probabilidade de $C_{i}$ dado $A{j}$, ou seja, $P(C_{i}|A_{j})$ considerando as possíveis combinações de $i$ e $j$. \n",
     "\n",
