--- a/projetos/projeto_02.ipynb
+++ b/projetos/projeto_02.ipynb
@@ -103,6 +103,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "(a) Explique como o cenário acima descrito pode ser modelado por uma cadeia de Markov, descrevendo detalhadamente os estados de sua cadeia e exibindo a sua matriz de probabilidades de transição. Cada passo de sua construção deve ser descrito de forma detalhada. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
